--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   font_awesome_flutter: ^10.1.0
   flutter_native_splash: ^2.1.6
+  url_launcher: ^6.1.2
+  flutter_rating_bar: ^4.0.0
 
 flutter_native_splash:
   android: true
