--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   http:
   youtube_player_flutter: ^8.0.0
+  flutter_lints: ^1.0.0
+  font_awesome_flutter: ^10.1.0
+  flutter_native_splash: ^2.1.6
+  flutter_rating_bar: ^4.0.0
   
 dev_dependencies:
   flutter_test:
@@ -46,16 +50,12 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
-  font_awesome_flutter: ^10.1.0
-  flutter_native_splash: ^2.1.6
-  flutter_rating_bar: ^4.0.0
 
 flutter_native_splash:
   android: true
   ios: true
   color: "#000000"
-  image: "assets/splash.png"
+  image: "assets/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
